progress login screen design

--- a/public/src/app/components/sign-in/sign-in.component.html
+++ b/public/src/app/components/sign-in/sign-in.component.html
@@ -1,5 +1,12 @@
-<div class="formGroup">
-    <button type="button" (click)="authService.GoogleAuth()">
-      Log in with Google
-    </button>
-  </div>
+
+<div class="main_container">
+
+    <h1>Study Sphere</h1>
+    <div class="app_container-glass">
+        <div class="heading">Let's go</div>
+
+        <button type="button" class="login-with-google-btn" (click)="authService.GoogleAuth()">
+            Log in with Google
+        </button>
+    </div>
+</div>
