alter login page style and logic

--- a/public/src/app/components/sign-in/sign-in.component.html
+++ b/public/src/app/components/sign-in/sign-in.component.html
@@ -1,7 +1,9 @@
 
 <div class="main_container">
 
-    <h1>Study Sphere</h1>
+    <h1>Study Sphere
+        <small>Welcome to the best kept secret for study collaboration. Engage, Learn, and Have fun</small>
+    </h1>
     <div class="app_container-glass">
         <div class="heading">Let's go</div>
 
