--- a/public/src/app/components/sign-in/sign-in.component.scss
+++ b/public/src/app/components/sign-in/sign-in.component.scss
@@ -16,13 +16,20 @@
     h1 {
         color: #E91E63;
         font-size: 4rem;
-        text-align: center;
         position: absolute;
         top: 4rem;
         left: 5rem;
         font-family: "Lobster Two", cursive;
         font-weight: 400;
         font-style: italic;
+
+        small {
+            color: #CFD8DC;
+            font-size: 1rem;
+            display: block;
+            margin-top: 1rem;
+        }
+
     }
 }
 
@@ -119,6 +126,11 @@
             position: inherit;
             justify-self: center;
             margin-top: 2rem;
+            text-align: center;
+
+            small {
+                margin: 2rem 1rem;
+            }
         }
     }
 }
