--- a/public/src/app/components/sign-in/sign-in.component.html
+++ b/public/src/app/components/sign-in/sign-in.component.html
@@ -2,7 +2,7 @@
 <div class="main_container">
 
     <h1>Study Sphere
-        <small>Welcome to the best kept secret for study collaboration. Engage, Learn, and Have fun</small>
+        <small>Welcome to the best kept secret for study collaboration. <br><br> <span>Engage</span>, <span>Learn</span>, and <span>Have fun</span></small>
     </h1>
     <div class="app_container-glass">
         <div class="heading">Let's go</div>
