--- a/public/src/app/components/sign-in/sign-in.component.scss
+++ b/public/src/app/components/sign-in/sign-in.component.scss
@@ -28,6 +28,11 @@
             font-size: 1rem;
             display: block;
             margin-top: 1rem;
+
+            >span {
+                color: #7E57C2;
+                font-weight: 600;
+            }
         }
 
     }
@@ -129,7 +134,7 @@
             text-align: center;
 
             small {
-                margin: 2rem 1rem;
+                margin: 2rem 1rem 0;
             }
         }
     }
