progress login screen design (#5)
* progress login screen design

* alter login page style and logic

* styling changes

--- a/public/src/app/components/sign-in/sign-in.component.html
+++ b/public/src/app/components/sign-in/sign-in.component.html
@@ -1,5 +1,14 @@
-<div class="formGroup">
-    <button type="button" (click)="authService.GoogleAuth()">
-      Log in with Google
-    </button>
-  </div>
+
+<div class="main_container">
+
+    <h1>Study Sphere
+        <small>Welcome to the best kept secret for study collaboration. <br><br> <span>Engage</span>, <span>Learn</span>, and <span>Have fun</span></small>
+    </h1>
+    <div class="app_container-glass">
+        <div class="heading">Let's go</div>
+
+        <button type="button" class="login-with-google-btn" (click)="authService.GoogleAuth()">
+            Log in with Google
+        </button>
+    </div>
+</div>
