--- a/public/src/app/components/sign-in/sign-in.component.scss
+++ b/public/src/app/components/sign-in/sign-in.component.scss
@@ -42,9 +42,9 @@
     background: rgba(27, 49, 98, 0.44);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8.7px);
-    -webkit-backdrop-filter: blur(8.7px);
-    border: 1px solid rgba(27, 49, 98, 0.22);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgb(136 109 141 / 72%);
     height: 20vh;
     width: 30vw;
     justify-self: center;
