initial banner work

--- a/public/src/app/components/sign-in/sign-in.component.html
+++ b/public/src/app/components/sign-in/sign-in.component.html
@@ -8,7 +8,7 @@
         <div class="heading">Let's go</div>
 
         <button type="button" class="login-with-google-btn" (click)="authService.GoogleAuth()">
-            Log in with Google
+            Sign in with Google
         </button>
     </div>
 </div>
