--- a/public/src/app/components/banner/banner.component.scss
+++ b/public/src/app/components/banner/banner.component.scss
@@ -13,16 +13,34 @@
         position: absolute;
         left: calc(50% - 5rem);
         bottom: 0rem;
-        background: url(/assets/images/circle_1.png);
         width: 10rem;
         height: 10rem;
-        background-size: cover;
-        background-position: center;
+
+        &:before {
+            content: '';
+            background: url(/assets/images/circle_1.png);
+            width: 10rem;
+            height: 10rem;
+            z-index: 1000;
+            position: absolute;
+            background-size: contain;
+        }
 
         img {
             border-radius: 50%;
             margin-left: 2rem;
             margin-top: 2rem;
+
+
+        }
+
+        &:hover {
+
+            &:before {
+                animation-name: rotate;
+                animation-iteration-count: infinite;
+                animation-duration: 1.5s;
+            }
         }
     }
 
@@ -36,7 +54,7 @@
         box-sizing: border-box;
 
         .banner_action {
-            padding: 0.5rem;
+            padding: 0.5rem 1rem;
             border: 1px solid #607D8B;
             border-radius: 0.25rem;
             background: #fff;
@@ -53,4 +71,14 @@
         }
     }
 
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0);
+    }
+
+    to {
+        transform: rotate(720deg);
+    }
 }
