--- a/public/src/app/components/dashboard/dashboard.component.scss
+++ b/public/src/app/components/dashboard/dashboard.component.scss
@@ -5,4 +5,44 @@
     height: 100vh;
     background-position: top;
     background-repeat: no-repeat;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.panel {
+    background: #05071a;
+    margin: 2rem 1rem;
+    box-sizing: border-box;
+    border: 1px solid #4527A0;
+    border-radius: 0.25rem;
+    padding: 1rem;
+    color: #EEEEEE;
+    position: relative;
+
+    .heading {
+        color: #E91E63;
+        font-family: "Lobster Two", cursive;
+        font-weight: 400;
+        font-style: italic;
+        font-size: 1.5rem;
+        background: #0b0a23;
+        display: table;
+        padding: 0 0.5rem;
+        position: absolute;
+        top: -1rem;
+        left: 0.5rem;
+    }
+
+    .item {
+        padding: 1rem 0.5rem;
+        margin: 0.5rem 0;
+        background: #25262f;
+        border: 1px solid #37464d;
+        border-radius: 0.25rem;
+        box-shadow: inset 0 0 3px 0px #000;
+
+        &:hover {
+            background: lighten(#25262f, 10%);
+        }
+    }
 }
