--- a/public/src/app/components/dashboard/dashboard.component.html
+++ b/public/src/app/components/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
             <div class="name">
             {{friend.displayName}}
             </div>
-            <div class="action" (click)="removeFriend(friend.uid)">
+            <div class="action destructive" (click)="removeFriend(friend.uid)">
                 <i class="fa-solid fa-user-minus"></i>
             </div>
         </div>
@@ -20,7 +20,7 @@
         <ng-template #searchInput>
             <div class="input-container">
 
-            <input type="text" placeholder="Search for friends" autofocus/>
+            <input type="text" placeholder="Search for friends" autofocus [formControl]="userSearchFormControl"/>
             <div class="tray-item" (click)="isSearching = false"><i class="fa-solid fa-circle-xmark"></i></div>
         </div>
         </ng-template>
