--- a/public/src/app/components/dashboard/dashboard.component.scss
+++ b/public/src/app/components/dashboard/dashboard.component.scss
@@ -7,15 +7,6 @@
     background-repeat: no-repeat;
     display: grid;
     grid-template-rows: 1fr 1fr;
-
-    // &:after {
-    //     content: '';
-    //     background-image: url('/assets/images/home_bkg.gif');
-    //     background-position: center center;
-    //     background-size: 80%;
-    //     background-repeat: no-repeat;
-    //     margin-bottom: 3rem;
-    // }
 }
 
 .panel {
@@ -48,7 +39,7 @@
     .item {
         padding: 1rem 0.5rem;
         margin: 0.5rem 0;
-        background: #25262f;
+        background: linear-gradient(to right, #25262f, #19191e);
         border: 1px solid #37464d;
         border-radius: 0.25rem;
         box-shadow: inset 0 0 3px 0px #000;
@@ -58,6 +49,16 @@
 
         &:hover {
             background: lighten(#25262f, 10%);
+        }
+
+        .action {
+            &.destructive {
+                color: #794747;
+
+                &:hover {
+                    color: #df2e2e;
+                }
+            }
         }
     }
 
@@ -81,6 +82,18 @@
             background: #37474F;
             padding: 0.7rem 1rem;
             border-radius: 1.5rem;
+            box-shadow: 0px 2px 0 0px #9E9E9E;
+            cursor: pointer;
+            user-select: none;
+
+            &:active {
+                box-shadow: none;
+                transform: translateY(2px);
+            }
+
+            &:hover {
+                background: lighten(#37474F, 5%)
+            }
         }
 
         .input-container {
@@ -100,7 +113,7 @@
             }
         }
 
-        
+
 
     }
 }
