--- a/public/src/app/components/dashboard/dashboard.component.html
+++ b/public/src/app/components/dashboard/dashboard.component.html
@@ -7,8 +7,14 @@
 
         <div class="item-list" *ngSwitchCase="'My Friends'">
             <div class="item" *ngFor="let friend of (userObject | async)?.friends">
-                <div class="name">
-                    {{friend.displayName}}
+                <div class="meta">
+                    <div class="avatar">
+                        <img src="{{(friend.photoURL) ? friend.photoURL : '/assets/dummy-user.png'}}"
+                            alt="{{friend.displayName}}">
+                    </div>
+                    <div class="name">
+                        {{friend.displayName}}
+                    </div>
                 </div>
                 <div class="item-actions">
                     <div class="action destructive" (click)="removeFriend(friend.uid)">
@@ -63,13 +69,13 @@
     <div class="tray">
         <div class="left-actions">
             <div class="tray-item" [class.current]="showFriends" *ngIf="!isSearching" (click)="displayFriends()"><i
-                    class="fa-solid fa-user-group"></i>
+                    class="fa-solid fa-fw fa-user-group"></i>
             </div>
             <div class="tray-item" [class.current]="showMyFriendRequests" *ngIf="!isSearching"
-                (click)="displayFriendRequests()"><i class="fa-solid fa-people-arrows"></i></div>
+                (click)="displayFriendRequests()"><i class="fa-solid fa-fw fa-people-arrows"></i></div>
             <div class="tray-item" [class.current]="showNotifications"
                 [class.notify]="friendRequests && friendRequests.length > 0" *ngIf="!isSearching"
-                (click)="displayNotifications()"><i class="fa-solid fa-bell"></i>
+                (click)="displayNotifications()"><i class="fa-solid fa-fw fa-bell"></i>
             </div>
 
         </div>
