--- a/public/src/app/components/dashboard/dashboard.component.scss
+++ b/public/src/app/components/dashboard/dashboard.component.scss
@@ -37,7 +37,7 @@
     }
 
     .item {
-        padding: 1rem 0.5rem;
+        padding: 0.5rem 0.5rem;
         margin: 0.5rem 0;
         background: linear-gradient(to right, #25262f, #19191e);
         border: 1px solid #37464d;
@@ -46,6 +46,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
 
         &:hover {
             background: lighten(#25262f, 10%);
@@ -57,6 +58,21 @@
 
         &.myRequests {
             background: linear-gradient(to right, #3b417f, #19191e);
+        }
+
+        .meta {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+
+            .avatar {
+                border: 2px solid #607D8B;
+                border-radius: 5rem;
+                img {
+                    height: 2rem;
+                    border-radius: 5rem;
+                }
+            }
         }
 
         .name {
@@ -123,6 +139,7 @@
             cursor: pointer;
             user-select: none;
             position: relative;
+            -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 
             &:active,
             &.current {
